--- a/README
+++ b/README
@@ -16,18 +16,24 @@ Features:
   write the content of this help file.)
 * add '-seen <username>' command to display the delay since last connection
   of <username>
-* add '-shutdown <delay> <expected-downtime>' a *console only* command to schedule a graceful 
-  shutdown of the server after a specified delay in minutes. It will regularly broadcast a
-  warning to users of the approach of the shutdown event (every half hour, then 10 minutes,
-  then 5, then 1). Use '-shutdown -1' to cancel shutdown.
-* add Internationalization framework and french translation - please send me
-  more!
+* add '-shutdown <delay> <expected-downtime>' a *console only* command to schedule
+  a graceful shutdown of the server after a specified delay in minutes. It will
+  regularly broadcast a warning to users of the approach of the shutdown event 
+  (every half hour, then 10 minutes, then 5, then 1).
+  Use '-shutdown -1' to cancel shutdown.
+* add Internationalization framework and french translation - please send me more!
 * changed 'create' policy : no argument means you get a 64 stack.
-* Allow optional restriction of what IP are associated with what  username, so that random 
-  people can't steal someone's legit username on offline servers.
-  Simply list the allowed IPs or IP  ranges *inside* each of the tztk/whitelisted-players/<username> files.
+* Allow optional restriction of what IP are associated with what username, so that
+  random people can't steal someone's legit username on offline servers.
+ Simply list the allowed IPs or IP  ranges *inside* each of the individual
++  tztk/whitelisted-players/<username> files.
   e.g: 154.48.9.34
        234.44.
   and only people with the corresponding IP, or with IP matching with
   pattern 234.44.xx.xx will be able to use said username.
 
+Don't expect much updates to this software from me, but feel free to send me
+patches or merge requests : I'll be happy to merge anything that makes sense.
+
+Enjoy,
+-Spart
